<?xml version="1.0" encoding="utf-8"?>
<!--
(C) Copyright 2015 - Present day by Igor Chernishenko.
All rights reserved.
-->
<resources>
    <string name="app_name">Draw &amp; Memo</string>

    <!-- Generic strings-->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="file_prefix">DrawAndMemo_</string>

    <!-- CreateMemoActivity menu actions-->
    <string name="action_color">Change Color</string>
    <string name="action_size">Change Size</string>
    <string name="action_eraser">Eraser</string>
    <string name="action_bg">Change Background</string>

    <!-- CreateMemoActivity dialogs-->
    <string name="select_color">Select Color</string>
    <string name="select_width">Select Line Width</string>
    <string name="select_bg_source">Select Background...</string>
    <string name="bg_source_color">Color</string>
    <string name="bg_source_image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="select_source">Select Source</string>
    <string name="action_settings">Settings</string>

    <!-- DrawArea messages-->
    <string name="message_saved">Your painting has been saved to the Gallery</string>
    <string name="message_error_saving">There was an error saving the image</string>
    <string name="message_error_printing">Your device does not support printing</string>

    <!-- Create AlarmActivity-->
    <string name="time">TIME</string>
    <string name="date">DATE</string>
    <string name="vibration">Vibration</string>
    <string name="alarm">Alarm</string>
    <string name="select">Select</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_frequency">Repeat once...</string>
    <string name="period">Period: </string>
    <string name="in_an_hour">In %s hour(s)</string>
    <string name="in_a_day">In %s day(s)</string>
    <string name="in_a_week">In %s week(s)</string>
    <string name="in_a_month">In %s month(s)</string>

    <!-- HomeActivity toasts-->
    <string name="memo_created">Memo successfully created!</string>
    <string name="alarm_created">Alarm successfully created!</string>
</resources>
